--- a/templates/applets/uuid-generator.jinja
+++ b/templates/applets/uuid-generator.jinja
@@ -12,12 +12,12 @@
 <br>
 
 <label for="uuid-generator-option-hyphens" class="mr-xxs">{{ l10n("option.hyphen", "uuid-generator", user_lang) }}:</label>
-<input id="uuid-generator-option-hyphens" class="r-m border" type="checkbox" checked>
+<input id="uuid-generator-option-hyphens" class="r-m border cb-pretty" type="checkbox" checked>
 
 <br>
 
 <label for="uuid-generator-option-guid-brackets" class="mr-xxs">{{ l10n("option.guid_brackets", "uuid-generator", user_lang) }}:</label>
-<input id="uuid-generator-option-guid-brackets" class="r-m border" type="checkbox">
+<input id="uuid-generator-option-guid-brackets" class="r-m border cb-pretty" type="checkbox">
 
 <hr class="subtle">
 
