Updated png and bmp related-libs, Updated home page and sidebar Update sidebar.yml, home.yml, and 7 more files...

--- a/templates/applets/png-analyser.jinja
+++ b/templates/applets/png-analyser.jinja
@@ -1,3 +1,3 @@
 
-{{ render_file_input(tool_id + "-test-input", true, ".png", true, true) }}
+{{ render_file_input(tool_id + "-test-input", true, ".png, .bmp", true, true) }}
 
