--- a/templates/pages/root.jinja
+++ b/templates/pages/root.jinja
@@ -12,51 +12,58 @@
 {% endblock %}
 
 {% block main_content %}
-    {{ render_h1(l10n("intro.title", "home", user_lang, ["NibblePoker." + domain_tld] )) }}
+    <section>
+        {{ render_h1(l10n("intro.title", "home", user_lang, ["NibblePoker." + domain_tld] )) }}
 
-    {{ render_paragraph(l10n("intro.text.1", "home", user_lang)) }}
-    {{ render_paragraph(l10n("intro.text.2", "home", user_lang)) }}
+        <div class="content-spacer">
+            {{ render_paragraph(l10n("intro.text.1", "home", user_lang)) }}
+            {{ render_paragraph(l10n("intro.text.2", "home", user_lang)) }}
+        </div>
+    </section>
+    
+    <section>
+        {{ render_h2(l10n("updates.title", "home", user_lang)) }}
 
+        <div class="content-spacer">
+            <p><i class="fad fa-calendar-alt mr-xs"></i>{{ l10n("updates.5.date", "home", user_lang) }}</p>
+            {{ render_list_ul([
+                l10n("updates.5.text.1", "home", user_lang),
+                l10n("updates.5.text.2", "home", user_lang),
+                l10n("updates.text.privacy", "home", user_lang)
+            ]) }}
 
-    {{ render_h2(l10n("updates.title", "home", user_lang)) }}
+            <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.4.date", "home", user_lang) }}</p>
+            {{ render_list_ul([
+                l10n("updates.4.text.1", "home", user_lang),
+                l10n("updates.4.text.2", "home", user_lang),
+                l10n("updates.4.text.3", "home", user_lang),
+                l10n("updates.text.privacy", "home", user_lang)
+            ]) }}
 
-    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.5.date", "home", user_lang) }}</p>
-    {{ render_list_ul([
-        l10n("updates.5.text.1", "home", user_lang),
-        l10n("updates.5.text.2", "home", user_lang),
-        l10n("updates.text.privacy", "home", user_lang)
-    ]) }}
+            <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.3.date", "home", user_lang) }}</p>
+            {{ render_list_ul([
+                l10n("updates.3.text.1", "home", user_lang),
+                l10n("updates.3.text.2", "home", user_lang),
+                l10n("updates.3.text.3", "home", user_lang),
+                l10n("updates.text.privacy", "home", user_lang)
+            ]) }}
 
-    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.4.date", "home", user_lang) }}</p>
-    {{ render_list_ul([
-        l10n("updates.4.text.1", "home", user_lang),
-        l10n("updates.4.text.2", "home", user_lang),
-        l10n("updates.4.text.3", "home", user_lang),
-        l10n("updates.text.privacy", "home", user_lang)
-    ]) }}
+            <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.2.date", "home", user_lang) }}</p>
+            {{ render_list_ul([
+                l10n("updates.2.text.1", "home", user_lang),
+                l10n("updates.2.text.2", "home", user_lang),
+                l10n("updates.2.text.3", "home", user_lang),
+                l10n("updates.2.text.4", "home", user_lang),
+                l10n("updates.text.privacy", "home", user_lang)
+            ]) }}
 
-    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.3.date", "home", user_lang) }}</p>
-    {{ render_list_ul([
-        l10n("updates.3.text.1", "home", user_lang),
-        l10n("updates.3.text.2", "home", user_lang),
-        l10n("updates.3.text.3", "home", user_lang),
-        l10n("updates.text.privacy", "home", user_lang)
-    ]) }}
-
-    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.2.date", "home", user_lang) }}</p>
-    {{ render_list_ul([
-        l10n("updates.2.text.1", "home", user_lang),
-        l10n("updates.2.text.2", "home", user_lang),
-        l10n("updates.2.text.3", "home", user_lang),
-        l10n("updates.2.text.4", "home", user_lang),
-        l10n("updates.text.privacy", "home", user_lang)
-    ]) }}
-
-    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.1.date", "home", user_lang) }}</p>
-    {{ render_list_ul([
-        l10n("updates.1.text.1", "home", user_lang),
-        l10n("updates.text.privacy", "home", user_lang)
-    ]) }}
+            <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.1.date", "home", user_lang) }}</p>
+            {{ render_list_ul([
+                l10n("updates.1.text.1", "home", user_lang),
+                l10n("updates.text.privacy", "home", user_lang)
+            ]) }}
+        </div>
+    </section>
 
 {% endblock %}
 
