--- a/templates/applets/uuid-generator.jinja
+++ b/templates/applets/uuid-generator.jinja
@@ -9,7 +9,7 @@
 <label for="uuid-generator-option-count" class="mr-xs">{{ l10n("option.count", "uuid-generator", user_lang) }}:</label>
 <input id="uuid-generator-option-count" class="p-xxs border r-s" type="number" value="4" min="1" max="1000">
 
-<br>
+<hr class="subtle">
 
 <label for="uuid-generator-option-hyphens" class="mr-xxs">{{ l10n("option.hyphen", "uuid-generator", user_lang) }}:</label>
 <input id="uuid-generator-option-hyphens" class="r-m border cb-pretty" type="checkbox" checked>
@@ -18,6 +18,11 @@
 
 <label for="uuid-generator-option-guid-brackets" class="mr-xxs">{{ l10n("option.guid_brackets", "uuid-generator", user_lang) }}:</label>
 <input id="uuid-generator-option-guid-brackets" class="r-m border cb-pretty" type="checkbox">
+
+<br>
+
+<label for="uuid-generator-option-uppercase" class="mr-xxs">{{ l10n("option.uppercase", "uuid-generator", user_lang) }}:</label>
+<input id="uuid-generator-option-uppercase" class="r-m border cb-pretty" type="checkbox">
 
 <hr class="subtle">
 
